@@ -76,8 +76,8 @@ exports[`telepath: wagtail.blocks.StructBlock setError passes error messages to 
 
 exports[`telepath: wagtail.blocks.StructBlock with formTemplate it renders correctly 1`] = `
 "<div class=\\"custom-form-template\\">
-          <p>here comes the first field:</p>
-          <div class=\\"w-field__wrapper\\" data-field-wrapper=\\"\\">
+        <p>here comes the first field:</p>
+        <div class=\\"w-field__wrapper\\" data-field-wrapper=\\"\\">
         <div class=\\"w-field w-field--char_field w-field--text_input\\" data-field=\\"\\">
           <div class=\\"w-field__errors\\" id=\\"the-prefix-heading_text-errors\\" data-field-errors=\\"\\">
             <svg class=\\"icon icon-warning w-field__errors-icon\\" aria-hidden=\\"true\\" hidden=\\"\\"><use href=\\"#icon-warning\\"></use></svg>
@@ -88,8 +88,8 @@ exports[`telepath: wagtail.blocks.StructBlock with formTemplate it renders corre
           <div id=\\"the-prefix-heading_text-helptext\\" data-field-help=\\"\\"></div>
         </div>
       </div>
-          <p>and here is the second:</p>
-          <div class=\\"w-field__wrapper\\" data-field-wrapper=\\"\\">
+        <p>and here is the second:</p>
+        <div class=\\"w-field__wrapper\\" data-field-wrapper=\\"\\">
         <div class=\\"w-field w-field--choice_field w-field--select\\" data-field=\\"\\">
           <div class=\\"w-field__errors\\" id=\\"the-prefix-size-errors\\" data-field-errors=\\"\\">
             <svg class=\\"icon icon-warning w-field__errors-icon\\" aria-hidden=\\"true\\" hidden=\\"\\"><use href=\\"#icon-warning\\"></use></svg>
@@ -100,5 +100,5 @@ exports[`telepath: wagtail.blocks.StructBlock with formTemplate it renders corre
           <div id=\\"the-prefix-size-helptext\\" data-field-help=\\"\\"></div>
         </div>
       </div>
-        </div>"
+      </div>"
 `;
