@@ -20,7 +20,7 @@ depth: 1
 
 ### Bug fixes
 
- * ...
+ * Ensure `label_format` on StructBlock gracefully handles missing variables (Aadi jindal)
 
 ### Documentation
 
